--- a/css/styles.css
+++ b/css/styles.css
@@ -7,8 +7,72 @@ body {
     background-image: url("./../img/tamagotchiCharacter.png");
     background-size: 100vw;
     background-repeat: repeat-n;
+};
+
+div {
+    background-color: cyan;
 }
 
-/* h1 {
-    font-size: 200px;
+.flex-container {
+    /* max-width: 1200px; */
+    /* margin: auto;
+    /* position: absolute; */
+    /* top: 0%;
+    left: 0%;
+    flex-wrap: wrap; */
+    display: flex;
+    background-color: gray;
+    flex-direction: column;
+    justify-content: center;
+    width: 60vw;
+    align-items: center;
+};
+
+.flex-container > div {
+    /* 
+    width: 25%;
+    margin: 10px;
+     */
+    display: flex;
+    background-color: purple;
+    text-align: center;
+};
+
+#statsHeaders {
+    color: chartreuse;
+    /* display: inline; */
+    flex-direction: row;
+
+};
+
+h1 {
+    font-size: 100px;
+    color: white;
+    font-family: "bree", sans-serif;
+    font-weight: 800;
+    font-style: normal;
+    margin-left: auto;
+};
+
+h2 {
+    font-family: "parlare", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color: #fff2cc;
+    font-size: 50px;
+    padding-left: 290px;
+    line-height: 20%;
+    margin-right: auto;
+};
+
+h3 {
+    font-size: 24px;
+    /* padding-left: 25px;
+    padding-right: 25px; */
+    text-align: center;
+    color: white;
+};
+
+/* h4 {
+    padding-left: 100px;
 } */
